--- a/style.css
+++ b/style.css
@@ -20,6 +20,51 @@ body {
     border: 1px solid #eeeded;
 }
 
+/* Team container styles */
+.team-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap; /* Allows team members to wrap to the next line on smaller screens */
+    background: rgba(185, 185, 185, 0.863);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border: 1px solid #eeeded;
+}
+
+.team-container h2 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #242323;
+}
+
+.team-member {
+    text-align: center;
+    margin: 10px;
+}
+
+.team-member img {
+    width: 150px;
+    height: 150px;
+    border-radius: 5%;
+    object-fit: cover;
+}
+.team-member h1 {
+    margin-top: 5px;
+    font-size: 18px;
+    font-weight: bolder;
+    color: #242323;
+}
+
+.team-member p {
+    margin-top: 5px;
+    font-size: 12px;
+    font-weight: bold;
+    color: rgb(78, 76, 76);
+}
+
 #logo {
     width: 150px;
     height: 150px;
