--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
   color: #222222;
   background-color: #f6f8fb;
   display: flex;
+  padding-left: 200px;
+  
 }
 
 /* directory */
@@ -70,12 +72,13 @@ body {
   align-items: flex-start;
   padding: 20px;
   max-width: 75%;
-  margin: 40px auto 40px calc(200px + (100% - 200px - 75%) / 2);
-  margin-right: auto;
+  /*margin: 40px auto 40px calc(200px + (100% - 200px - 75%) / 2);*/
+  margin: 40px auto;
   border: 1px solid #ddd;
   border-radius: 10px;
   background-color: #ffffff;
   font-size: 15px;
+  min-height: 70vh;
 }
 
 .content h1 {
@@ -123,7 +126,7 @@ body {
   justify-content: center; /* Horizontally centers content */
   align-items: center;    /* Vertically aligns content */
   gap: 20px;              /* Adds space between the text and logo */
-  width: 100%;            /* Ensures the container takes up the full width */
+  width: 100%;         /* Ensures the container takes up the full width */
 }
 
 .content-title img {
